# sage

./: .credo.exs  .formatter.exs  .gitignore  Dockerfile  Procfile  README.md  analysis_options.yaml  build.yaml  docker-compose.yml  fly.toml  generate_latex.py  mix.exs  pubspec.yaml  schema.graphql
.github/workflows/: deploy.yml  deployment-aws.yml  deployment-gcp.yml  elixir.yaml
android/app/: build.gradle  google-services.json
app/: README.md  analysis_options.yaml  build.yaml  pubspec.yaml
app/lib/: auth.dart  main.dart
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
ios/: .gitignore
lib/: config.dart  main.dart  sage.ex  sage_web.ex
sage_client/: README.md  pubspec.yaml
sage_flutter/: README.md  pubspec.yaml
sage_server/: README.md  docker-compose.yaml  pubspec.yaml
server/: .gitignore  README.md  pyproject.toml  requirements.txt  serve.sh  settings.toml
server/gaia/: __init__.py  exceptions.py  main.py  models.py
server/gaia/business/: emails.py  surveys.py
server/gaia/config/: __init__.py  firebase-admin.json
server/gaia/models/: db.py  db.sqlite  schemas.py  utils.py  validators.py
server/gaia/routes/: __init__.py  surveys.py  users.py  utils.py
server/gaia/utils/: crypto.py  exceptions.py  pub.pem
server/sage/: main.py
server/sage/business/: emails.py  surveys.py  users.py
server/sage/models/: db.py  schemas.py  utils.py
server/sage/routes/: __init__.py  answers.py  surveys.py  users.py  utils.py
server/sage/utils/: priv.pem
server/src/model/: db.py
test/: test_helper.exs  widget_test.dart
(+436 files in other folders)
