[tool.poetry]
name = "gaia-server"
version = "0.1.0"
description = ""
authors = ["Caio Pereira Oliveira <caiopoliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pony = "^0.7.10"
flask = "^1.1.1"
firebase_admin = "^3.0.0"
schema = "^0.7.1"
gunicorn = "^19.9"
psycopg2-binary = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
