[tool.poetry]
name = "gaia-server"
version = "0.1.0"
description = ""
authors = ["Caio Pereira Oliveira <caiopoliveira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pony = "^0.7.13"
flask = "^2.2.5"
firebase_admin = "^4.3.0"
schema = "^0.7.2"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
cryptography = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
